<resources>
    <string name="app_name">Booru</string>

    <string name="title_activity_upload">Booru Upload</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_api_url">API URL</string>
    <string name="pref_title_ignore_cert">Ignore server certificate</string>
    <string name="pref_title_username">Username</string>
    <string name="pref_title_password">Password</string>
    <string name="pref_title_default_tags">Default Tags</string>
    <string name="pref_default_api_url">https://examplebooru.net/api.php</string>
    <string name="pref_default_username">username</string>
    <string name="pref_default_default_tags">todo_tags</string>
    <string name="pref_summary_password_hidden">(hidden)</string>
    <string name="pref_summary_cert_check">Certificate will be checked</string>
    <string name="pref_summary_cert_ignore">Certificate will be ignored</string>

    <string name="progress_dialog_title">Uploading...</string>
    <string name="progress_dialog_message">Please wait, this could take a while</string>

</resources>
